--- a/src/style/pages/FinancialStatements/GeneralLedger.scss
+++ b/src/style/pages/FinancialStatements/GeneralLedger.scss
@@ -1,75 +1,88 @@
+.financial-sheet {
+  &--general-ledger {
+    .financial-sheet__table {
 
-.financial-sheet{
-  &--general-ledger{
-    .financial-sheet__table{
       .tbody,
-      .thead{
+      .thead {
+
         .tr .td,
-        .tr .th{
+        .tr .th {
+
           &.credit,
           &.debit,
           &.running_balance,
-          &.amount{
+          &.amount {
             text-align: right;
           }
         }
       }
-      .tbody{
-       
-        .tr .td{
+
+      .tbody {
+        .tr .td {
           padding-top: 0.2rem;
           padding-bottom: 0.2rem;
           border-top-color: transparent;
           border-bottom-color: transparent;
-  
-          &.date{
-            > div{
+
+          &.date {
+            >div {
               display: flex;
             }
-            span.force-width{
+
+            span.force-width {
               position: relative;
             }
           }
         }
-        .tr:not(.no-results) .td{
+
+        .tr:not(.no-results) .td {
           border-left: 1px solid #ececec;
         }
 
-        .tr{
-          &.is-expanded{
+        .tr:last-child .td {
+          border-bottom: 1px solid #ececec;
+        }
 
-            .td.amount{
+        .tr {
+          &.is-expanded {
 
-              .cell-inner{
+            .td.amount {
+
+              .cell-inner {
                 display: none
               }
             }
           }
         }
-        .tr.row-type{
+
+        .tr.row-type {
 
 
-          &--ACCOUNT_ROW{
-            .td{
-              &.date{
+          &--ACCOUNT_ROW {
+            .td {
+              &.date {
                 font-weight: 500;
               }
-              &.name{
+
+              &.name {
                 border-left-color: transparent;
               }
             }
-            &:not(:first-child).is-expanded .td{
+
+            &:not(:first-child).is-expanded .td {
               border-top: 1px solid #DDD;
             }
           }
+
           &--OPENING_BALANCE,
-          &--CLOSING_BALANCE{
-            .amount{
+          &--CLOSING_BALANCE {
+            .amount {
               font-weight: 500;
             }
           }
-          &--CLOSING_BALANCE{
-            .name{
+
+          &--CLOSING_BALANCE {
+            .name {
               font-weight: 500;
             }
           }
